chore: address medium issue #297 (round 1) (#298)